# sampler-lab

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bootstrap-pr2-notebooks.yml  bootstrap-pr3-notebooks.yml  bootstrap-pr4-notebooks.yml  ci.yml  cleanup-pr2-artifacts.yml  codeql.yml  debug-pr4-ruff.yml  fix-pr8-quick-assertion.yml  notebook-pilot-bootstrap.yml  pages.yml  release.yml  ruff-autofix.yml
docs/: api.md  benchmarking.md  build_status.md  index.md  performance.md  public_api.md  references.md  releasing.md  roadmap.md  testing.md
docs/methods/: adaptive_policy_sampling.md  annealed_paths.md  conditioning_ensembles.md  exact_sampling.md  gibbs_metropolis.md  hamiltonian_dynamics.md  importance_sampling.md  langevin_dynamics.md  markov_theory.md  particle_methods.md  rare_events.md
docs/notebooks/: 00_orientation_and_diagnostics.ipynb  01_exact_and_iid_sampling.ipynb  02_importance_sampling.ipynb  04_finite_state_markov_theory.ipynb  07_langevin_sampling.ipynb  08_hamiltonian_and_underdamped_dynamics.ipynb  09_geometry_conditioning_and_ensembles.ipynb  10_adaptive_and_learned_sampling.ipynb  11_rare_event_sampling.ipynb  12_cross_method_benchmarking.ipynb  index.md  manifest.toml
docs/plans/: cross_method_benchmarks.md  policy_gradient_sampling.md
experiments/02_exact_sampling/: disk_benchmark.py
experiments/03_importance_sampling/: gaussian_importance_demo.py
experiments/04_particle_methods/: saw_demo.py
experiments/05_markov_chains/: finite_state_demo.py
experiments/06_gibbs_metropolis/: ising_demo.py
experiments/08_langevin/: gaussian_langevin_demo.py
experiments/09_hamiltonian/: hamiltonian_demo.py
experiments/11_policy_gradient/: policy_gradient_demo.py
experiments/12_rare_events/: small_noise_demo.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/benchmarking/: index.html
tests/: test_documentation_examples.py
tools/: _bootstrap_notebook_pilot.py.zlib.b64  bootstrap_pr2_finalize.py  bootstrap_pr2_notebooks.py.gz.b64.part00  bootstrap_pr2_notebooks.py.part00  bootstrap_pr2_notebooks.py.part01  bootstrap_pr2_notebooks.py.part02  bootstrap_pr2_notebooks.py.part03  bootstrap_pr2_notebooks.py.part04  bootstrap_pr2_notebooks.py.part05  bootstrap_pr2_notebooks.py.part06  bootstrap_pr2_notebooks.py.part07  bootstrap_pr2_notebooks.py.part08  bootstrap_pr3_notebooks.py.gz.b64  bootstrap_pr4_notebooks.py.gz.b64.part00  bootstrap_pr4_notebooks.py.gz.b64.part01  bootstrap_pr4_notebooks.py.gz.b64.part02  bootstrap_pr4_notebooks.py.gz.b64.part03  check_notebook_manifest.py  export_public_candidate.py  normalize_notebooks.py  publication_check.py
(+228 files in other folders)
